bk_ida/gccida/c3/notreg_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/notreg_cost/src/cse.c:1264:26: error: must use 'enum' tag to refer to type 'rtx_code'
int  notreg_cost( rtx x, rtx_code outer) 
                         ^
                         enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/notreg_cost/src/cse.c:1268:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] == MODE_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/notreg_cost/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/notreg_cost/src/cse.c:1269:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint)] == MODE_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/notreg_cost/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/notreg_cost/src/obj/cse.o] Error 1
